# radio

./: .gitignore  .nvim.lua  ARCHITECTURE.md  Cargo.toml  Makefile.toml  README.md  README.zh-CN.md  build.rs  cspell.json  partitions.csv
.cargo/: config.toml
docs/: ota-design.md  ota-design.zh-CN.md
examples/: rotary_encoder.rs  si4703_fm_radio.rs  slint_st7789.rs  slint_st7789_ui.slint  wifi_provision.rs
material-1.0/ui/components/: search_bar.slint
src/: lib.rs
src/display/: mod.rs
src/rotary_encoder/: mod.rs
src/si4703/: mod.rs
src/wifi_provision/: mod.rs  storage.rs
tests/: hello_test.rs
tools/host-tests/: Cargo.toml
tools/host-tests/src/: lib.rs  mdns_parser.rs  preset_codec.rs  rt_plus_parser.rs  sntp.rs  spectrum.rs  text.rs  url_parser.rs
tools/ota-serve/: Cargo.toml  README.md
tools/ota-serve/src/: main.rs
ui/: main.slint  preview_data.boot.json  preview_data.json  preview_data.ota_downloading.json  preview_data.ota_failed.json  preview_data.ota_indeterminate.json  preview_data.ota_success.json  preview_data.weak_mono.json  radio_ui.slint  slint_st7789_ui.slint
