[package]
edition = "2024"
name = "radio"
rust-version = "1.88"
version = "0.1.0"

[[bin]]
name = "radio"
path = "./src/bin/main.rs"
test = false

[[test]]
harness = false
name = "hello_test"

[lib]
test = false

[dependencies]
esp-hal = {version = "1.1.1", features = ["defmt", "esp32c6", "unstable"]}

esp-rtos = {version = "0.3.0", features = [
  "defmt",
  "embassy",
  "esp-alloc",
  "esp-radio",
  "esp32c6",
]}

defmt = "1.1.0"
esp-bootloader-esp-idf = {version = "0.5.0", features = ["defmt", "esp32c6"]}

embassy-net = {version = "0.9.1", features = [
  "defmt",
  "dhcpv4",
  "medium-ethernet",
  "tcp",
  "udp",
]}
embedded-io = {version = "0.7.1", features = ["defmt"]}
embedded-io-async = {version = "0.7.0", features = ["defmt"]}
esp-alloc = {version = "0.10.0", features = ["defmt"]}
panic-rtt-target = {version = "0.2.0", features = ["defmt"]}
rtt-target = {version = "0.6.2", features = ["defmt"]}
# for more networking protocol support see https://crates.io/crates/edge-net
bt-hci = "0.8.1"
embassy-executor = {version = "0.10.0", features = ["defmt"]}
embassy-time = {version = "0.5.1", features = ["defmt"]}
esp-radio = {version = "0.18.0", features = [
  "ble",
  "coex",
  "defmt",
  "esp-alloc",
  "esp32c6",
  "unstable",
  "wifi",
]}
smoltcp = {version = "0.13.1", default-features = false, features = [
  "defmt",
  "medium-ethernet",
  "multicast",
  "proto-dhcpv4",
  "proto-dns",
  "proto-ipv4",
  "socket-dns",
  "socket-icmp",
  "socket-raw",
  "socket-tcp",
  "socket-udp",
]}
trouble-host = {version = "0.6.0", features = ["gatt"]}

critical-section = "1.2.0"
static_cell = "2.1.1"
picoserve = "0.18.0"

# Slint UI framework（embedded no_std）
slint = {version = "1.16", default-features = false, features = [
  "compat-1-2",
  "unsafe-single-threaded",
  "libm",
  "renderer-software",
]}

# ST7789 display driver
mipidsi = "0.10"
embedded-graphics = "0.8"
embedded-graphics-core = "0.4"
embedded-hal = "1.0"
embedded-hal-bus = "0.3"
esp-storage = { version = "0.9.0", features = ["esp32c6", "defmt"] }
embedded-storage = "0.3.1"
# Use Cargo's built-in dependency resolution to handle version conflicts
# Remove patch section and let Cargo resolve the version conflict

[dev-dependencies]
embedded-test = {version = "0.7.1", features = [
  "defmt",
  "embassy-010",
  "external-executor",
]}

[build-dependencies]
slint-build = "1.16"

[[example]]
name = "slint_st7789"
path = "examples/slint_st7789.rs"

[[example]]
name = "si4703_fm_radio"
path = "examples/si4703_fm_radio.rs"

[[example]]
name = "wifi_provision"
path = "examples/wifi_provision.rs"

# For fine tuning these settings, please refer to https://doc.rust-lang.org/cargo/reference/profiles.html
[profile.dev]
# The default debug profile is too slow and too big for resource-constrained devices.
# Always build with some optimizations enabled.
opt-level = "s"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2 # prefer slower builds but better debugging experience
lto = 'fat' 
opt-level = 's'
